--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,22 +4,18 @@ on:
   push:
     branches:
       - main
-      - gpu-spsolve
   pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: nvidia/cuda:12.6.2-devel-ubuntu24.04
     steps:
     - uses: actions/checkout@v4
-    - uses: Jimver/cuda-toolkit@master
-      id: cuda-toolkit
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: 3.11
-        cache: 'pip'
-        cache-dependency-path: pyproject.toml
     - name: Install dependencies
       run: python -m pip install -e '.[dev]'
     - name: Install
