--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "project8"
 version = "0.0.1"
 requires-python = ">=3.11"
 dependencies = [
-    "cupy>=13.3",
+    "cupy-cuda12x[all]>=13.3",
     "matplotlib>=3.9",
     "numpy>=2.0"
 ]
