--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container: nvidia/cuda:12.6.2-devel-ubuntu24.04
+    env:
+      NOGPU: 1
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
