--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ name = "project8"
 version = "0.0.1"
 requires-python = ">=3.11"
 dependencies = [
-    "numpy>=2.0"
+    "numpy>=2.0",
+    "scipy>=1.14",
+    "scipy-stubs>=1.14",
+    "matplotlib>=3.9"
 ]
 
 [project.optional-dependencies]
