--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ name = "project8"
 version = "0.0.1"
 requires-python = ">=3.11"
 dependencies = [
-    "numpy>=2.0",
     "scipy>=1.14",
     "scipy-stubs>=1.14",
-    "matplotlib>=3.9"
+    "cupy-cuda12x[all]>=13.3",
+    "matplotlib>=3.9",
+    "numpy>=2.0",
+    "torch>=2.5.0"
 ]
 
 [project.optional-dependencies]
