Revert "Merge branch 'coenvdvelde-MatrixGenerator-for-N_dimensional-Laplacian' of https://github.com/Project-08/Project-8 into coenvdvelde-MatrixGenerator-for-N_dimensional-Laplacian"
This reverts commit 3c19810bb949e399e64d8b1224b643bf51561c77, reversing
changes made to 95b106148e8de5057dbbb699a3aa2e972c0ec86d.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ py-modules = ["project8"]
 [tool.flake8]
 exclude = ["old"]
 
-[tool.pytest.ini_options]
-pythonpath = ["."]
+[tool.mypy]
+strict = true
 
 [tool.pydocstyle]
 # Ignore various documentation-related warnings (for now)
@@ -46,9 +46,7 @@ ignore = [
     "D102",
     "D103",
     "D104",
-    "D105",
     "D107",
-    "D203",
     "D205",
     "D208",
     "D212",
