--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,25 +9,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/project-08/project-8/project8:latest
-      credentials:
-        username: ${{ secrets.ghcr_user }}
-        password: ${{ secrets.ghcr_token }}
-    env:
-      NOGPU: 1
     steps:
     - uses: actions/checkout@v4
-    - name: Install dependencies
-      run: python -m pip install -e '.[dev]'
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
     - name: Install
-      run: python -m pip install .
+      run: python -m pip install '.[dev]'
     - name: Lint
       run: flake8
     - name: Mypy
-      run: |
-        mypy project8
-        mypy tests
+      run: mypy project8
     - name: Test
       run: pytest
     - name: Install build
