--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.0.1"
 requires-python = ">=3.11"
 dependencies = [
     "scipy==1.13",
+    "scipy-stubs==1.14"
     "cupy-cuda12x[all]>=13.3",
     "matplotlib>=3.9",
     "numpy>=2.0",
