--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,12 @@ version = "0.0.1"
 requires-python = ">=3.11"
 dependencies = [
     "scipy==1.13",
-    "scipy-stubs==1.14"
+    "scipy-tubs==1.14",
     "cupy-cuda12x[all]>=13.3",
     "matplotlib>=3.9",
     "numpy>=2.0",
-    "torch>=2.5.0"
+    "torch>=2.5.0",
+    "matplotlib>=3.9"
 ]
 
 [project.optional-dependencies]
@@ -35,8 +36,8 @@ py-modules = ["project8"]
 [tool.flake8]
 exclude = ["old"]
 
-[tool.mypy]
-strict = true
+[tool.pytest.ini_options]
+pythonpath = ["."]
 
 [tool.pydocstyle]
 # Ignore various documentation-related warnings (for now)
@@ -46,7 +47,9 @@ ignore = [
     "D102",
     "D103",
     "D104",
+    "D105",
     "D107",
+    "D203",
     "D205",
     "D208",
     "D212",
